--- a/src/index.scss
+++ b/src/index.scss
@@ -53,6 +53,7 @@
   }
 
   body {
+    font-family: "NanumSquareNeo", "Apple SD Gothic Neo", "Malgun Gothic", sans-serif;
     @apply bg-background text-foreground;
   }
 }
