--- a/src/index.scss
+++ b/src/index.scss
@@ -4,47 +4,86 @@
 
 @layer base {
   :root {
+    /* preview hsl(0 0% 100%) */
     --background: 0 0% 100%;
+    /* preview hsl(222.2 47.4% 11.2%) */
     --foreground: 222.2 47.4% 11.2%;
+    /* preview hsl(210 40% 96.1%) */
     --muted: 210 40% 96.1%;
+    /* preview hsl(215.4 16.3% 46.9%) */
     --muted-foreground: 215.4 16.3% 46.9%;
+    /* preview hsl(0 0% 100%) */
     --popover: 0 0% 100%;
+    /* preview hsl(222.2 47.4% 11.2%) */
     --popover-foreground: 222.2 47.4% 11.2%;
+    /* preview hsl(0 0% 100%) */
     --card: 0 0% 100%;
+    /* preview hsl(222.2 47.4% 11.2%) */
     --card-foreground: 222.2 47.4% 11.2%;
+    /* preview hsl(214.3 31.8% 91.4%) */
     --border: 214.3 31.8% 91.4%;
+    /* preview hsl(214.3 31.8% 91.4%) */
     --input: 214.3 31.8% 91.4%;
+    /* preview hsl(222.2 47.4% 11.2%) */
     --primary: 222.2 47.4% 11.2%;
+    /* preview hsl(210 40% 98%) */
     --primary-foreground: 210 40% 98%;
+    /* preview hsl(210 40% 96.1%) */
     --secondary: 210 40% 96.1%;
+    /* preview hsl(222.2 47.4% 11.2%) */
     --secondary-foreground: 222.2 47.4% 11.2%;
+    /* preview hsl(210 40% 96.1%) */
     --accent: 210 40% 96.1%;
+    /* preview hsl(222.2 47.4% 11.2%) */
     --accent-foreground: 222.2 47.4% 11.2%;
+    /* preview hsl(0 84.2% 60.2%) */
     --destructive: 0 84.2% 60.2%;
+    /* preview hsl(210 40% 98%) */
     --destructive-foreground: 210 40% 98%;
+    /* preview hsl(222.2 47.4% 11.2%) */
     --ring: 222.2 47.4% 11.2%;
+    /* preview 0.5rem */
     --radius: 0.5rem;
   }
 
   .dark {
+    /* preview hsl(224 71.4% 4.1%) */
     --background: 224 71.4% 4.1%;
+    /* preview hsl(210 40% 98%) */
     --foreground: 210 40% 98%;
+    /* preview hsl(215 27.9% 16.9%) */
     --muted: 215 27.9% 16.9%;
+    /* preview hsl(217.9 10.6% 64.9%) */
     --muted-foreground: 217.9 10.6% 64.9%;
+    /* preview hsl(224 71.4% 4.1%) */
     --popover: 224 71.4% 4.1%;
+    /* preview hsl(210 40% 98%) */
     --popover-foreground: 210 40% 98%;
+    /* preview hsl(224 71.4% 4.1%) */
     --card: 224 71.4% 4.1%;
+    /* preview hsl(210 40% 98%) */
     --card-foreground: 210 40% 98%;
+    /* preview hsl(215 27.9% 16.9%) */
     --border: 215 27.9% 16.9%;
+    /* preview hsl(215 27.9% 16.9%) */
     --input: 215 27.9% 16.9%;
+    /* preview hsl(210 40% 98%) */
     --primary: 210 40% 98%;
+    /* preview hsl(222.2 47.4% 11.2%) */
     --primary-foreground: 222.2 47.4% 11.2%;
+    /* preview hsl(215 27.9% 16.9%) */
     --secondary: 215 27.9% 16.9%;
+    /* preview hsl(210 40% 98%) */
     --secondary-foreground: 210 40% 98%;
+    /* preview hsl(215 27.9% 16.9%) */
     --accent: 215 27.9% 16.9%;
+    /* preview hsl(210 40% 98%) */
     --accent-foreground: 210 40% 98%;
+    /* preview hsl(0 62.8% 30.6%) */
     --destructive: 0 62.8% 30.6%;
+    /* preview hsl(210 40% 98%) */
     --destructive-foreground: 210 40% 98%;
+    /* preview hsl(212.7 26.8% 83.9%) */
     --ring: 212.7 26.8% 83.9%;
   }
 
